[package]
name = "layout"
version = "0.1.1"
edition = "2024"

[features]
default = ["color"]
color = ["oklab", "rgb", "ufmt"]
layout = ["allsorts", "rtext", "thiserror", "tracing"]

[dependencies]
rtext = { git = "https://martinkolariknp@bitbucket.org/martinkolariknp/rtext.git", optional = true }

oklab = { version = "^1.1", optional = true }
rgb = { version = "^0.8", default-features = false, features = [
    "argb",
], optional = true }

allsorts = { version = "^0.15", default-features = false, features = [
    "flate2_zlib",
], optional = true }
smol_str = { version = "^0.3" }
thiserror = { version = "^2.0", optional = true }
tracing = { version = "^0.1", default-features = false, features = [
    "std",
], optional = true }
ufmt = { version = "^0.2", features = [
    "std",
], default-features = false, optional = true }
